Fri Jan  4 15:28:20 UTC 2013  Simon Massey  <simon dot massey at prismtech dot com>

        * bin/tao_other_tests.lst:
        * orbsvcs/tests/Bug_4080_Regression/Bug_4080_Regression.mpc:
        * orbsvcs/tests/Bug_4080_Regression/client.cpp:
        * orbsvcs/tests/Bug_4080_Regression/README:
        * orbsvcs/tests/Bug_4080_Regression/run_test.pl:
        * orbsvcs/tests/Bug_4080_Regression/server.cpp:
        * orbsvcs/tests/Bug_4080_Regression/svc.conf:
        * orbsvcs/tests/Bug_4080_Regression/test.idl:
        * orbsvcs/tests/Bug_4080_Regression/test_impl.cpp:
        * orbsvcs/tests/Bug_4080_Regression/test_impl.h:

          Bugzilla 4080 test.

        * orbsvcs/orbsvcs/PortableGroup/Portable_Group_Map.h:
        * orbsvcs/orbsvcs/PortableGroup/Portable_Group_Map.cpp:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Mcast_Transport.cpp:
        * tao/Transport.h:
        * tao/Transport.inl:
        * tao/Transport.cpp:

          Bugzilla 4080 Fix.

Fri Jan  4 12:07:03 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Monitor/Monitor.cpp:
          Fixed versioned namespace problem

Thu Dec 27 09:19:04 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated in preparation of next release

Thu Dec 27 10:00:49 CET 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO version 2.1.7 released.

Tue Dec 18 16:23:19 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * NEWS:

          Added tao_idl bug fix entry.

Mon Dec 17 13:40:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * orbsvcs/tests/Miop/McastHello/svc.conf:
          Updated to enable -ORBListenOnAll 1.

 Wed Dec 05 09:41:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Mcast_Transport.cpp:
          Re-fixed the memory leak in MIOP server listener (as previous).
          Since this data block's buffer is malloced internally (heap),